# wei-shell

./: Cargo.toml
src/: main.rs
