[package]
name = "wei-shell"
version = "0.1.1"
edition = "2021"
description = "wei shell"
documentation = "https://github.com/zuiyue-com/wei-shell"
homepage = "https://github.com/zuiyue-com/wei-shell"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wei-log = "0.2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"